Continuing with combined dataframe

--- a/project/luther_analysis.ipynb
+++ b/project/luther_analysis.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "signature": "sha256:10a569d2f214a33bf8536060cf1b16659d78b37d8de1cf21e18b727e01d5ccc5"
+  "signature": "sha256:ab439fb99735f8d5c1a728d4e2b348e0832332f9949376a21c0b6280533ed78c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -15,6 +15,7 @@
       "%autoreload 2\n",
       "%matplotlib inline  \n",
       "import pickle\n",
+      "from collections import defaultdict\n",
       "import re\n",
       "from box_mojo import *\n",
       "from box_mojo_franchise_list import *\n",
@@ -49,7 +50,7 @@
        ]
       }
      ],
-     "prompt_number": 28
+     "prompt_number": 109
     },
     {
      "cell_type": "code",
@@ -6225,15 +6226,30 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "def getdfval(df,key,filmn):\n",
+      "    return df[key].iloc[filmn]\n",
+      "    \n",
+      "franchises_dict_list = []\n",
       "for franchise, movies_df in franchise_groups:\n",
-      "    print franchise\n",
-      "    first_film = movies_df['title'].iloc[0]\n",
-      "    second_film = movies_df['title'].iloc[1]\n",
-      "    third_film = movies_df['title'].iloc[1]\n",
-      "    print first_film, second_film, third_film\n",
-      "#     for index, row in movies_df.iterrows():\n",
-      "#         print row\n",
-      "        "
+      "    franchise_dict = {}\n",
+      "    try:\n",
+      "        franchise_dict['first_title'] = movies_df['title'].iloc[0]  \n",
+      "        franchise_dict['new_title'] = movies_df['title'].iloc[2] \n",
+      "        franchise_dict['franchise'] = franchise\n",
+      "        franchise_dict['prev_gross'] = (movies_df['domestic_total_gross'].iloc[0] + movies_df['domestic_total_gross'].iloc[1])/float(2)\n",
+      "        franchise_dict['act_gross'] = movies_df['domestic_total_gross'].iloc[2]\n",
+      "        franchise_dict['prev_meta'] = (movies_df['metacritic'].iloc[0] + movies_df['metacritic'].iloc[1])/float(2)\n",
+      "        franchise_dict['act_meta'] = movies_df['metacritic'].iloc[2]\n",
+      "        time_d = np.timedelta64(movies_df['release_date'].iloc[1] - movies_df['release_date'].iloc[0])\n",
+      "        franchise_dict['days_elapsed'] = time_d.item().total_seconds()/86400\n",
+      "        \n",
+      "    \n",
+      "        \n",
+      "        franchises_dict_list.append(franchise_dict)\n",
+      "    except IndexError:\n",
+      "        pass\n",
+      "\n",
+      "print franchises_dict_list[9]"
      ],
      "language": "python",
      "metadata": {},
@@ -6242,319 +6258,19 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "3ninjas\n",
-        "3 Ninjas 3 Ninjas Kick Back 3 Ninjas Kick Back\n",
-        "alexcross\n",
-        "Kiss the Girls Along Came a Spider Along Came a Spider\n",
-        "alien\n",
-        "Alien Aliens Aliens\n",
-        "alvinseries\n",
-        "The Chipmunk Adventure Alvin and the Chipmunks Alvin and the Chipmunks\n",
-        "americanninja\n",
-        "American Ninja American Ninja 2 American Ninja 2\n",
-        "americanpie\n",
-        "American Pie American Pie 2 American Pie 2\n",
-        "amityville\n",
-        "The Amityville Horror Amityville II: The Possession Amityville II: The Possession\n",
-        "arthur\n",
-        "Arthur Arthur 2: On the Rocks Arthur 2: On the Rocks\n",
-        "atlasshrugg\n",
-        "Atlas Shrugged: Part I Atlas Shrugged: Part II Atlas Shrugged: Part II\n",
-        "austinpowers\n",
-        "Austin Powers: International Man of Mystery Austin Powers: The Spy Who Shagged Me Austin Powers: The Spy Who Shagged Me\n",
-        "avengers\n",
-        "Iron Man The Incredible Hulk The Incredible Hulk\n",
-        "avengersfranchise\n",
-        "Marvel's The Avengers Avengers: Age of Ultron Avengers: Age of Ultron\n",
-        "backtothefuture\n",
-        "Back to the Future Back to the Future Part II Back to the Future Part II\n",
-        "badnewsbears\n",
-        "The Bad News Bears The Bad News Bears in Breaking Training The Bad News Bears in Breaking Training\n",
-        "barbershop\n",
-        "Barbershop Barbershop 2: Back in Business Barbershop 2: Back in Business\n",
-        "batman\n",
-        "Batman Batman Returns Batman Returns\n",
-        "before\n",
-        "Before Sunrise Before Sunset Before Sunset\n",
-        "benji\n",
-        "Benji For the Love of Benji For the Love of Benji\n",
-        "bestman\n",
-        "The Best Man The Best Man Holiday The Best Man Holiday\n",
-        "beverlyhillscop\n",
-        "Beverly Hills Cop Beverly Hills Cop II Beverly Hills Cop II\n",
-        "bigmomma\n",
-        "Big Momma's House Big Momma's House 2 Big Momma's House 2\n",
-        "blade\n",
-        "Blade Blade II Blade II\n",
-        "bourne\n",
-        "The Bourne Identity The Bourne Supremacy The Bourne Supremacy\n",
-        "captainamerica\n",
-        "Captain America: The First Avenger Captain America: The Winter Soldier Captain America: The Winter Soldier\n",
-        "carebears\n",
-        "The Care Bears Movie The Care Bears Movie 2 The Care Bears Movie 2\n",
-        "childsplay\n",
-        "Child's Play Child's Play 2 Child's Play 2\n",
-        "chroniclesofnarnia\n",
-        "The Chronicles of Narnia: The Lion, the Witch and the Wardrobe The Chronicles of Narnia: Prince Caspian The Chronicles of Narnia: Prince Caspian\n",
-        "conan\n",
-        "Conan the Barbarian Conan the Destroyer Conan the Destroyer\n",
-        "crocodiledundee\n",
-        "Crocodile Dundee Crocodile Dundee II Crocodile Dundee II\n",
-        "despicableme\n",
-        "Despicable Me Despicable Me 2 Despicable Me 2\n",
-        "dhoom\n",
-        "Dhoom Dhoom 2 Dhoom 2\n",
-        "diehard\n",
-        "Die Hard Die Hard 2: Die Harder Die Hard 2: Die Harder\n",
-        "dirtyharry\n",
-        "Dirty Harry Magnum Force Magnum Force\n",
-        "divergent\n",
-        "Divergent The Divergent Series: Insurgent The Divergent Series: Insurgent\n",
-        "dumbdumber\n",
-        "Dumb and Dumber Dumb and Dumberer: When Harry Met Lloyd Dumb and Dumberer: When Harry Met Lloyd\n",
-        "ernest\n",
-        "Ernest Goes to Camp Ernest Saves Christmas Ernest Saves Christmas\n",
-        "evangelion\n",
-        "Evangelion 1.0 You Are Evangelion 2.0: You Can Evangelion 2.0: You Can\n",
-        "evildead\n",
-        "The Evil Dead Evil Dead 2 Evil Dead 2\n",
-        "exorcist\n",
-        "The Exorcist Exorcist II: The Heretic Exorcist II: The Heretic\n",
-        "expendables\n",
-        "The Expendables The Expendables 2 The Expendables 2\n",
-        "fastandthefurious\n",
-        "The Fast and the Furious 2 Fast 2 Furious 2 Fast 2 Furious\n",
-        "finaldestination\n",
-        "Final Destination Final Destination 2 Final Destination 2\n",
-        "fockers\n",
-        "Meet the Parents Meet the Fockers Meet the Fockers\n",
-        "freewilly\n",
-        "Free Willy Free Willy 2: The Adventure Home Free Willy 2: The Adventure Home\n",
-        "friday\n",
-        "Friday Next Friday Next Friday\n",
-        "fridaythe13th\n",
-        "Friday the 13th Friday the 13th Part 2 Friday the 13th Part 2\n",
-        "frightnight\n",
-        "Fright Night Fright Night II Fright Night II\n",
-        "godfather\n",
-        "The Godfather The Godfather Part II The Godfather Part II\n",
-        "godzilla\n",
-        "Godzilla 1985 Godzilla Godzilla\n",
-        "halloween\n",
-        "Halloween Halloween II Halloween II\n",
-        "hangover\n",
-        "The Hangover The Hangover Part II The Hangover Part II\n",
-        "hannibal\n",
-        "Manhunter The Silence of the Lambs The Silence of the Lambs\n",
-        "haroldandkumar\n",
-        "Harold and Kumar Go to White Castle Harold and Kumar Escape from Guantanamo Bay Harold and Kumar Escape from Guantanamo Bay\n",
-        "harrypotter\n",
-        "Harry Potter and the Sorcerer's Stone Harry Potter and the Chamber of Secrets Harry Potter and the Chamber of Secrets\n",
-        "hellraiser\n",
-        "Hellraiser Hellbound: Hellraiser II Hellbound: Hellraiser II\n",
-        "highlander\n",
-        "Highlander Highlander 2: The Quickening Highlander 2: The Quickening\n",
-        "hobbit\n",
-        "The Hobbit: An Unexpected Journey The Hobbit: The Desolation of Smaug The Hobbit: The Desolation of Smaug\n",
-        "homealone\n",
-        "Home Alone Home Alone 2: Lost in New York Home Alone 2: Lost in New York\n",
-        "houseparty\n",
-        "House Party House Party 2 House Party 2\n",
-        "httyd\n",
-        "How to Train Your Dragon How to Train Your Dragon 2 How to Train Your Dragon 2\n",
-        "hungergames\n",
-        "The Hunger Games The Hunger Games: Catching Fire The Hunger Games: Catching Fire\n",
-        "iceage\n",
-        "Ice Age Ice Age: The Meltdown Ice Age: The Meltdown\n",
-        "indianajones\n",
-        "Raiders of the Lost Ark Raiders of the Lost Ark Raiders of the Lost Ark\n",
-        "insidious\n",
-        "Insidious Insidious Chapter 2 Insidious Chapter 2\n",
-        "ironeagle\n",
-        "Iron Eagle Iron Eagle II Iron Eagle II\n",
-        "ironmanfranchise\n",
-        "Iron Man Iron Man 2 Iron Man 2\n",
-        "jackass\n",
-        "Jackass: The Movie Jackass: Number Two Jackass: Number Two\n",
-        "jackryan\n",
-        "The Hunt for Red October Patriot Games Patriot Games\n",
-        "jamesbond\n",
-        "Dr. No From Russia, with Love From Russia, with Love\n",
-        "jaws\n",
-        "Jaws Jaws 2 Jaws 2\n",
-        "jurassicpark\n",
-        "Jurassic Park The Lost World: Jurassic Park The Lost World: Jurassic Park\n",
-        "karatekid\n",
-        "The Karate Kid The Karate Kid Part II The Karate Kid Part II\n",
-        "kungfupanda\n",
-        "Kung Fu Panda Kung Fu Panda 2 Kung Fu Panda 2\n",
-        "langdon\n",
-        "The Da Vinci Code Angels & Demons Angels & Demons\n",
-        "lego\n",
-        "The LEGO Movie Ninjago Ninjago\n",
-        "lethalweapon\n",
-        "Lethal Weapon Lethal Weapon 2 Lethal Weapon 2\n",
-        "lookwhostalking\n",
-        "Look Who's Talking Look Who's Talking Too Look Who's Talking Too\n",
-        "lordoftherings\n",
-        "The Lord of the Rings The Lord of the Rings: The Fellowship of the Ring The Lord of the Rings: The Fellowship of the Ring\n",
-        "lovebug\n",
-        "The Love Bug Herbie Rides Again Herbie Rides Again\n",
-        "madagascar\n",
-        "Madagascar Madagascar: Escape 2 Africa Madagascar: Escape 2 Africa\n",
-        "madea\n",
-        "Tyler Perry's Diary of a Mad Black Woman Tyler Perry's Madea's Family Reunion Tyler Perry's Madea's Family Reunion\n",
-        "madmax\n",
-        "Mad Max The Road Warrior The Road Warrior\n",
-        "majorleague\n",
-        "Major League Major League II Major League II\n",
-        "mariachi\n",
-        "El Mariachi Desperado Desperado\n",
-        "matrix\n",
-        "The Matrix The Matrix Reloaded The Matrix Reloaded\n",
-        "meatballs\n",
-        "Meatballs Meatballs II Meatballs II\n",
-        "meninblackseries\n",
-        "Men in Black Men in Black II Men in Black II\n",
-        "mightyducks\n",
-        "The Mighty Ducks D2: The Mighty Ducks D2: The Mighty Ducks\n",
-        "millennium\n",
-        "The Girl with the Dragon Tattoo The Girl Who Played with Fire The Girl Who Played with Fire\n",
-        "missinginaction\n",
-        "Missing in Action Missing in Action II: The Beginning Missing in Action II: The Beginning\n",
-        "missionimpossible\n",
-        "Mission: Impossible Mission: Impossible II Mission: Impossible II\n",
-        "mummy\n",
-        "The Mummy The Mummy Returns The Mummy Returns\n",
-        "muppets\n",
-        "The Muppet Movie The Great Muppet Caper The Great Muppet Caper\n",
-        "nakedgun\n",
-        "The Naked Gun: From the Files of Police Squad! The Naked Gun 2 1/2: The Smell of Fear The Naked Gun 2 1/2: The Smell of Fear\n",
-        "neverendingstory\n",
-        "The Neverending Story The Neverending Story II The Neverending Story II\n",
-        "nightmareonelmstreet\n",
-        "A Nightmare on Elm Street A Nightmare on Elm Street 2: Freddy's Revenge A Nightmare on Elm Street 2: Freddy's Revenge\n",
-        "nightmuseum\n",
-        "Night at the Museum Night at the Museum: Battle of the Smithsonian Night at the Museum: Battle of the Smithsonian\n",
-        "oceans\n",
-        "Ocean's Eleven Ocean's Twelve Ocean's Twelve\n",
-        "ohgod\n",
-        "Oh, God! Oh, God! Book II Oh, God! Book II\n",
-        "omen\n",
-        "The Omen Damien: The Omen Part II Damien: The Omen Part II\n",
-        "ongbak\n",
-        "Ong Bak: The Thai Warrior Ong Bak 2: The Beginning Ong Bak 2: The Beginning\n",
-        "paranormalactivity\n",
-        "Paranormal Activity Paranormal Activity 2 Paranormal Activity 2\n",
-        "pinkpanther\n",
-        "The Pink Panther A Shot in the Dark A Shot in the Dark"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
-        "piratesofthecaribbean\n",
-        "Pirates of the Caribbean: The Curse of the Black Pearl Pirates of the Caribbean: Dead Man's Chest Pirates of the Caribbean: Dead Man's Chest\n",
-        "planetoftheapes\n",
-        "Planet of the Apes Beneath the Planet of the Apes Beneath the Planet of the Apes\n",
-        "pokemon\n",
-        "Pokemon: The First Movie Pokemon: The Movie 2000 Pokemon: The Movie 2000\n",
-        "policeacademy\n",
-        "Police Academy Police Academy 2: Their First Assignment Police Academy 2: Their First Assignment\n",
-        "poltergeist\n",
-        "Poltergeist Poltergeist Poltergeist\n",
-        "porkys\n",
-        "Porky's Porky's Porky's\n",
-        "predator\n",
-        "Predator Predator 2 Predator 2\n",
-        "psycho\n",
-        "Psycho Psycho II Psycho II\n",
-        "purge\n",
-        "The Purge The Purge: Anarchy The Purge: Anarchy\n",
-        "rambo\n",
-        "First Blood Rambo: First Blood Part II Rambo: First Blood Part II\n",
-        "residentevil\n",
-        "Resident Evil Resident Evil: Apocalypse Resident Evil: Apocalypse\n",
-        "returnofthelivingdead\n",
-        "Return of the Living Dead Return of the Living Dead 2 Return of the Living Dead 2\n",
-        "riddick\n",
-        "Pitch Black The Chronicles of Riddick The Chronicles of Riddick\n",
-        "robocop\n",
-        "Robocop Robocop 2 Robocop 2\n",
-        "rocky\n",
-        "Rocky Rocky II Rocky II\n",
-        "rugrats\n",
-        "The Rugrats Movie Rugrats in Paris: The Movie Rugrats in Paris: The Movie\n",
-        "rushhour\n",
-        "Rush Hour Rush Hour 2 Rush Hour 2\n",
-        "santaclause\n",
-        "The Santa Clause The Santa Clause 2 The Santa Clause 2\n",
-        "saw\n",
-        "Saw Saw II Saw II\n",
-        "scarymovie\n",
-        "Scary Movie Scary Movie 2 Scary Movie 2\n",
-        "scream\n",
-        "Scream Scream 2 Scream 2\n",
-        "shiloh\n",
-        "Shiloh Shiloh 2: Shiloh Season Shiloh 2: Shiloh Season\n",
-        "shrek\n",
-        "Shrek Shrek 2 Shrek 2\n",
-        "smokeyandthebandit\n",
-        "Smokey and the Bandit Smokey and the Bandit II Smokey and the Bandit II\n",
-        "smurfs\n",
-        "The Smurfs and the Magic Flute The Smurfs The Smurfs\n",
-        "spiderman\n",
-        "Spider-Man Spider-Man 2 Spider-Man 2\n",
-        "spykids\n",
-        "Spy Kids Spy Kids 2: The Island of Lost Dreams Spy Kids 2: The Island of Lost Dreams\n",
-        "startrek\n",
-        "Star Trek: The Motion Picture Star Trek II: The Wrath of Khan Star Trek II: The Wrath of Khan\n",
-        "starwars\n",
-        "Star Wars The Empire Strikes Back The Empire Strikes Back\n",
-        "stepup\n",
-        "Step Up Step Up 2 the Streets Step Up 2 the Streets\n",
-        "superman\n",
-        "Superman Superman II Superman II\n",
-        "taken\n",
-        "Taken Taken 2 Taken 2\n",
-        "teenagemutantninjaturtles\n",
-        "Teenage Mutant Ninja Turtles Teenage Mutant Ninja Turtles II Teenage Mutant Ninja Turtles II\n",
-        "terminator\n",
-        "The Terminator Terminator 2: Judgment Day Terminator 2: Judgment Day\n",
-        "texaschainsawmassacre\n",
-        "The Texas Chainsaw Massacre The Texas Chainsaw Massacre 2 The Texas Chainsaw Massacre 2\n",
-        "thor\n",
-        "Thor Thor: The Dark World Thor: The Dark World\n",
-        "toystory\n",
-        "Toy Story Toy Story 2 Toy Story 2\n",
-        "transformers\n",
-        "Transformers: The Movie Transformers Transformers\n",
-        "transporter\n",
-        "The Transporter Transporter 2 Transporter 2\n",
-        "twilight\n",
-        "Twilight The Twilight Saga: New Moon The Twilight Saga: New Moon\n",
-        "underworld\n",
-        "Underworld Underworld: Evolution Underworld: Evolution\n",
-        "universalsoldier\n",
-        "Universal Soldier Universal Soldier: The Return Universal Soldier: The Return\n",
-        "vacation\n",
-        "National Lampoon's Vacation European Vacation European Vacation\n",
-        "vhs\n",
-        "V/H/S V/H/S/2 V/H/S/2\n",
-        "wimpykid\n",
-        "Diary of a Wimpy Kid Diary of a Wimpy Kid: Rodrick Rules Diary of a Wimpy Kid: Rodrick Rules\n",
-        "witchmountain\n",
-        "Escape to Witch Mountain Return from Witch Mountain Return from Witch Mountain\n",
-        "workandtheglory\n",
-        "The Work and the Glory The Work and the Glory II: American Zion The Work and the Glory II: American Zion\n",
-        "xmen\n",
-        "X-Men X2: X-Men United X2: X-Men United\n"
+        "{'prev_meta': 55.0, 'act_meta': 62.0, 'new_title': 'Austin Powers in Goldmember', 'first_title': 'Austin Powers: International Man of Mystery', 'prev_gross': 217038800.0, 'act_gross': 304725600, 'franchise': 'austinpowers', 'days_elapsed': 770.0}\n"
        ]
       }
      ],
-     "prompt_number": 66
+     "prompt_number": 176
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
