Fixed bugs for LOTR and series with re-releases

--- a/project/luther_analysis.ipynb
+++ b/project/luther_analysis.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "signature": "sha256:85848de54baf05bf7366806c8653d2228bec7e62111b0e2e682e8128c0f2ffe8"
+  "signature": "sha256:63540bc83643edc23f79c3e9680d8eaeeda38f361be62278c53111d8fea669d0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,7 +13,7 @@
      "input": [
       "%load_ext autoreload\n",
       "%autoreload 2\n",
-      "%matplotlib inline  \n",
+      "# %matplotlib inline  \n",
       "import pickle\n",
       "from collections import defaultdict\n",
       "import re\n",
@@ -25,8 +25,7 @@
       "import numpy as np\n",
       "import pandas as pd\n",
       "import matplotlib.pyplot as plt\n",
-      "%base16_mplrc light default\n",
-      "%pylab inline"
+      "%base16_mplrc light default\n"
      ],
      "language": "python",
      "metadata": {},
@@ -35,46 +34,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Setting plotting theme to default-light. Palette available in b16_colors\n",
-        "Populating the interactive namespace from numpy and matplotlib\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "WARNING: pylab import has clobbered these variables: ['pylab', 'datetime']\n",
-        "`%matplotlib` prevents importing * from pylab and numpy\n"
+        "Setting plotting theme to default-light. Palette available in b16_colors\n"
        ]
       }
      ],
-     "prompt_number": 4
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "franchiseslist = build_franchise_chart_urls()\n",
-      "franchise_urls = build_movie_url_list(franchiseslist)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 29
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# complete_data_list = make_complete_movie_dataset(franchise_urls)\n",
-      "\n",
-      "# with open(\"complete_data.pkl\", 'w') as picklefile:\n",
-      "#     pickle.dump(complete_data_list, picklefile)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -93,7 +57,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -105,17 +69,14 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "NameError",
-       "evalue": "name 'complete_data_list' is not defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-7-0bf505bb8af5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mcomplete_data_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[0;31mNameError\u001b[0m: name 'complete_data_list' is not defined"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{'rating': 'PG-13', 'metacritic': 58.0, 'title': \"Ocean's Twelve\", 'release_date': numpy.datetime64('2004-12-10'), 'budget': 110000000.0, 'director': 'Steven Soderbergh', 'oscars': 0, 'domestic_total_gross': 166630300, 'distrib': 'Warner Bros.', 'franchise': 'oceans', 'runtime': 124, 'genre': 'Crime Comedy'}\n"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 3
     },
     {
      "cell_type": "heading",
@@ -139,7 +100,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -705,59 +666,17 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "\tproperties = ['title',\n",
-      "                  'domestic_total_gross',\n",
-      "                  'release_date',\n",
-      "                  'runtime',\n",
-      "                  'rating',\n",
-      "                  'budget',\n",
-      "                  'genre',\n",
-      "                  'distrib',\n",
-      "                  'oscars',\n",
-      "                  'director',\n",
-      "                  'metacritic']"
-     ]
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "df_cleaned_dir = df_complete[pd.notnull(df_complete['director'])]\n",
-      "grouped_dir = df_cleaned_dir.groupby('director')\n",
-      "summed_dir = grouped_dir.sum()\n",
-      "movieperdir = grouped_dir.size()\n",
-      "\n",
-      "gross_per_movie = summed_dir.div(movieperdir,axis=0)\n",
-      "\n",
-      "avg_dir_gross = gross_per_movie.domestic_total_gross\n",
-      "avg_dir_gross.name = 'avg_dir_gross'\n",
-      "\n",
-      "director_df = df_complete[pd.notnull(df_complete['director'])]\n",
-      "ddf = director_df.copy()\n",
-      "ddf['avg_dir_gross'] = director_df.apply(lambda row: avg_dir_gross[row['director']], axis=1)\n",
-      "\n",
-      "\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 11
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def getdfval(df,key,filmn):\n",
-      "    return df[key].iloc[filmn]\n",
-      "    \n",
       "franchises_dict_list = []\n",
       "for franchise, movies_df in franchise_groups:\n",
+      "    movies_df.drop_duplicates('title', inplace=True)\n",
+      "    if franchise == 'lordoftherings':\n",
+      "        movies_df = movies_df[movies_df.rating != 'PG']\n",
       "    franchise_dict = {}\n",
       "    try:\n",
       "        franchise_dict['first_title'] = movies_df['title'].iloc[0]  \n",
@@ -791,49 +710,58 @@
       "        pass\n",
       "\n",
       "collapsed_df = pd.DataFrame(franchises_dict_list)\n",
-      "\n",
-      "print collapsed_df.head()"
+      "# collapsed_df.describe()\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "   act_gross  act_meta  days_elapsed       director             first_title  \\\n",
-        "0     788900       NaN           637           None                3 Ninjas   \n",
-        "1   26692400        30          1281      Rob Cohen          Kiss the Girls   \n",
-        "2  110947100        59          2611  David Fincher                   Alien   \n",
-        "3  234922500        41          7511   Betty Thomas  The Chipmunk Adventure   \n",
-        "4    1886100       NaN           609           None          American Ninja   \n",
-        "\n",
-        "       franchise           genre                                new_title  \\\n",
-        "0        3ninjas         Unknown                      3 Ninjas Knuckle Up   \n",
-        "1      alexcross  Crime Thriller                               Alex Cross   \n",
-        "2          alien   Sci-Fi Horror                                  Alien 3   \n",
-        "3    alvinseries   Family Comedy  Alvin and the Chipmunks: The Squeakquel   \n",
-        "4  americanninja          Action             American Ninja 3: Blood Hunt   \n",
-        "\n",
-        "   prev_gross  prev_meta rating  same_dir  same_genre  same_rating  \n",
-        "0    40714450        NaN  PG-13         0           0            0  \n",
-        "1   109040900         44  PG-13         0           0            0  \n",
-        "2   225786500        NaN      R         0           1            1  \n",
-        "3   135667950        NaN     PG         0           0            0  \n",
-        "4    16519800        NaN      R         1           1            1  \n"
-       ]
-      }
-     ],
-     "prompt_number": 21
+     "outputs": [],
+     "prompt_number": 54
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "import plotters\n",
+      "# collapsed_df.plot(x='prev_gross',y='act_gross', kind='scatter')\n",
+      "# plt.title('Domestic Grosses for Third films in Trilogies', fontsize=17);\n",
+      "# plt.xlabel(\"Avg. Gross of Previous Film (Billion $)\", fontsize=15, labelpad=5);\n",
+      "# plt.ylim(0, 1.0*10**9)\n",
+      "# # plt.axis([50,200,0,1.5*10**9])\n",
+      "# plt.ylabel(\"Gross of Third Film (Billion $)\", fontsize=15, labelpad=15);\n",
+      "# plt.show()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 178
+     "prompt_number": 55
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "x = collapsed_df['prev_gross']/1e6\n",
+      "y = collapsed_df['act_gross']/1e6\n",
+      "name = collapsed_df['new_title']\n",
+      "\n",
+      "# initiate hover plotter                                                                                                                                                                   \n",
+      "plotter = plotters.TwoVariableComparisonPlotter(x, y, name,\n",
+      "                                                x_range=(0, 1000),\n",
+      "                                                y_range = (0, 1000),\n",
+      "                                                label_display_style=\"hover\",\n",
+      "                                                xlabel=\"Budget (million dollars)\",\n",
+      "                                                ylabel = \"Avg. Gross of Previous Film (Million $)\")\n",
+      "\n",
+      "# plot!                                                                                                                                                                              \n",
+      "# plotter.add_text(0, 360, \"Highly\\nprofitable\")\n",
+      "# plotter.add_text(200, 0, \"Absolutely\\nregrettable\")\n",
+      "plt.title('Grosses for 3rd Films in Trilogies', fontsize=17)\n",
+      "\n",
+      "plotter.plot()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 57
     },
     {
      "cell_type": "code",
